# leater

./: .dockerignore  .gitignore  Dockerfile  cli.py  docker-compose.yml  gunicorn_conf.py  pyproject.toml
app/: db_tables.py  main.py  settings.py  workers.py
app/bot/: cli.py  telegram_bot.py
app/core/: db.py
app/document/: api.py  models.py  schemas.py  service.py  summary.py  summary2.py  summary3.py
app/ingest/: service.py  tasks.py
app/migrations/: env.py
app/migrations/versions/: 5b04abc36d62_text_filename.py  7494d0b57b5b_initial.py  753a48c8ac95_document.py  bed7c9a4b332_doc_summary.py  bede968e75b0_doc_url.py
app/user/: cli.py  models.py  service.py
scripts/: db-generate-migration.sh  db-migrate.sh  run-cmd.sh  run-tests.sh
scripts/docker/: db-generate-migration.sh  db-migrate.sh  run-cmd.sh  run-tests.sh  wait-for-multiple.sh
tests/: conftest.py  testdb.py
tests/test_app/test_user/: test_user.py
